# rt-rk

./: .containerignore  .gitignore  Dockerfile  README.md  SDV Hackathon 2025 - RT_RK.pptx  build-all-workers.sh  build.sh  docker-compose.yml  manifest.yaml  requirements.txt
CarlaClient/: SENSORS.md  ZENOH.md  main.py  requirements.txt  zenoh_subscriber_example.py
CarlaClient/src/: __init__.py  carla_setup.py  manual_control.py  zenoh_publisher.py  zenoh_subscriber.py
Dashboard/: README.md  kill_all.sh  start.sh  start_all.sh  test_dashboard.py  test_emergency_stop.py  test_lane_warnings.py  test_pedestrian_warnings.py
Dashboard/backend/: app.py  requirements.txt
Dashboard/frontend/: index.html
Dashboard/frontend/static/css/: style.css
Dashboard/frontend/static/js/: dashboard.js
Dashboard/test-app/: app.py  start_test.sh
Dashboard/test-app/templates/: test_interface.html
RONAtmpp/RONA/: main.py
RONAtmpp/RONA/src/: accident_recorder.py  network_interface.py
ank_scripts/: start_ank_server.sh
images/: Dockerfile
rust_ws/: Cargo.toml  README.md
rust_ws/.cargo/: config.toml
rust_ws/ucar_ai/: Cargo.toml
rust_ws/ucar_ai/src/: yolo_infer.rs
rust_ws/ucar_core/: Cargo.toml
rust_ws/ucar_core/src/: image_pub.rs  lib.rs
rust_ws/ucar_pub/: Cargo.toml
rust_ws/ucar_pub/src/: ucar_pub.rs  ucar_sub.rs
rust_ws/ucar_python/: BUILD_GUIDE.md  Cargo.toml  README.md  example_subscriber.py  pyproject.toml  test_ucar_python.py
rust_ws/ucar_python/python/: __init__.py
rust_ws/ucar_python/src/: lib.rs
ucar_manager/: ank_manager.py  cli.py
workers/: app.yaml  apps.yaml
workers/emergency/: Dockerfile  README.md  build.sh  worker_emergency.py
workers/emergency/src/: __init__.py  network_interface.py  obstacle_detection.py
workers/lane/: Dockerfile  README.md  build.sh  requirements.txt  worker_lane.py
workers/lane/src/: LaneDetector.py  __init__.py  imagePreProcesing.py  lane_detection_system.py  network_interface.py
workers/pedestrian/: Dockerfile  build.sh  network_interface.py  requirements.txt  worker_pedestrian.py
workers/rona/: Dockerfile  build.sh  worker_rona.py
workers/rona/src/: __init__.py  accident_recorder.py  network_interface.py
zenoh/: Dockerfile  Dockerfile.subscriber  build.sh  build_subscriber.sh  image_subscriber.py  image_subscriber_cv.py  manual_control_zenoh.py  requirements.txt  simple_zenoh_pub.py  simple_zenoh_sub.py
