[workspace]
members = [
    "ucar_pub",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

# Shared dependencies that can be used by workspace members
[workspace.dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
up-rust = { version = "0.7.0" }
up-transport-zenoh = { version = "0.8" }
zenoh = { version = "1.0.0-rc.2" }

# Workspace-level configuration