[workspace]
members = [
    "ucar_core",
    "ucar_pub",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

# Shared dependencies that can be used by workspace members
[workspace.dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
env_logger = "0.11.8"
up-rust = { version = "0.7.1" }
up-transport-zenoh = { version = "0.8.0" }
zenoh = { version = "1.5.1" }

ego-vehicle = { path = "../../sdv_lab/ego-vehicle/uprotocol-sensors" }

# Patches to fix compatibility issues
[patch.crates-io]
# Fix for CARLA action buffer type mismatch
carla = { git = "https://github.com/Eclipse-SDV-Hackathon-Chapter-Three/carla-rust.git", branch = "action-buffer-fix", package = "carla" }
carla-sys = { git = "https://github.com/Eclipse-SDV-Hackathon-Chapter-Three/carla-rust.git", branch = "action-buffer-fix", package = "carla-sys" }

# Workspace-level configuration